cra-node boilerplate test

--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "react-ui/node_modules"
   ],
   "dependencies": {
-    "express": "^4.14.1"
+    "express": "^4.14.1",
+    "npm": "^5.8.0"
   },
   "repository": {
     "type": "git",
