--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "react-ui/node_modules"
   ],
   "dependencies": {
-    "express": "^4.14.1",
+    "express": "^4.16.3",
+    "knex": "^0.14.4",
     "npm": "^5.8.0"
   },
   "repository": {
