--- a/package.json
+++ b/package.json
@@ -14,9 +14,13 @@
     "react-ui/node_modules"
   ],
   "dependencies": {
+    "body-parser": "^1.18.2",
+    "cors": "^2.8.4",
+    "dotenv": "^5.0.1",
     "express": "^4.16.3",
     "knex": "^0.14.4",
-    "npm": "^5.8.0"
+    "npm": "^5.8.0",
+    "pg": "^7.4.1"
   },
   "repository": {
     "type": "git",
