--- a/react-ui/package.json
+++ b/react-ui/package.json
@@ -6,9 +6,15 @@
     "react-scripts": "^1.1.0"
   },
   "dependencies": {
+    "axios": "^0.18.0",
+    "npm": "^5.8.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
-    "react-router-dom": "^4.2.2"
+    "react-redux": "^5.0.7",
+    "react-router-dom": "^4.2.2",
+    "redux": "^3.7.2",
+    "redux-form": "^7.3.0",
+    "redux-thunk": "^2.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
