--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-ui/node_modules"
   ],
   "dependencies": {
+    "bcrypt": "^1.0.3",
     "body-parser": "^1.18.2",
     "cors": "^2.8.4",
     "dotenv": "^5.0.1",
