--- a/react-ui/package.json
+++ b/react-ui/package.json
@@ -21,6 +21,7 @@
     "react-router-dom": "^4.2.2",
     "redux": "^3.7.2",
     "redux-form": "^7.3.0",
+    "redux-promise": "^0.5.3",
     "redux-thunk": "^2.2.0",
     "uuid": "^3.2.1"
   },
