--- a/react-ui/package.json
+++ b/react-ui/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "devDependencies": {
     "babel-eslint": "^8.2.2",
-    "eslint": "^4.9.0",
+    "eslint": "^4.19.1",
     "eslint-config-airbnb": "^16.1.0",
     "eslint-plugin-import": "^2.9.0",
     "eslint-plugin-jsx-a11y": "^6.0.3",
@@ -13,12 +13,18 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
+    "bootstrap": "^4.0.0",
+    "font-awesome": "^4.7.0",
+    "mdbreact": "^4.2.0",
     "npm": "^5.8.0",
     "prop-types": "^15.6.1",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
+    "react-error-overlay": "^4.0.0",
     "react-redux": "^5.0.7",
+    "react-router-bootstrap": "^0.24.4",
     "react-router-dom": "^4.2.2",
+    "reactstrap": "^5.0.0",
     "redux": "^3.7.2",
     "redux-form": "^7.3.0",
     "redux-promise": "^0.5.3",
