--- a/react-ui/package.json
+++ b/react-ui/package.json
@@ -17,6 +17,7 @@
     "@fortawesome/react-fontawesome": "0.0.18",
     "axios": "^0.18.0",
     "bootstrap": "^4.0.0",
+    "dotenv": "^5.0.1",
     "font-awesome": "^4.7.0",
     "mdbreact": "^4.2.0",
     "npm": "^5.8.0",
@@ -27,6 +28,7 @@
     "react-redux": "^5.0.7",
     "react-router-bootstrap": "^0.24.4",
     "react-router-dom": "^4.2.2",
+    "react-stripe-elements": "^1.6.0",
     "reactstrap": "^5.0.0",
     "redux": "^3.7.2",
     "redux-form": "^7.3.0",
