--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
     "pg": "^7.4.1",
+    "stripe": "^5.8.0",
     "twilio": "^3.14.0"
   },
   "repository": {
