--- a/react-ui/package.json
+++ b/react-ui/package.json
@@ -19,6 +19,7 @@
     "bootstrap": "^4.0.0",
     "dotenv": "^5.0.1",
     "font-awesome": "^4.7.0",
+    "mdbreact": "^4.2.0",
     "moment": "^2.22.1",
     "npm": "^5.8.0",
     "prop-types": "^15.6.1",
