--- a/react-ui/package.json
+++ b/react-ui/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "devDependencies": {
-    "babel-eslint": "^8.2.2",
+    "babel-eslint": "^8.2.3",
     "eslint": "^4.19.1",
     "eslint-config-airbnb": "^16.1.0",
     "eslint-plugin-import": "^2.9.0",
@@ -19,6 +19,7 @@
     "bootstrap": "^4.0.0",
     "dotenv": "^5.0.1",
     "font-awesome": "^4.7.0",
+    "material-ui": "^0.20.0",
     "mdbreact": "^4.2.0",
     "moment": "^2.22.1",
     "npm": "^5.8.0",
@@ -33,6 +34,7 @@
     "reactstrap": "^5.0.0",
     "redux": "^3.7.2",
     "redux-form": "^7.3.0",
+    "redux-form-material-ui": "^4.3.4",
     "redux-promise": "^0.5.3",
     "redux-thunk": "^2.2.0",
     "semantic-ui-css": "^2.3.1",
