--- a/react-ui/package.json
+++ b/react-ui/package.json
@@ -24,6 +24,7 @@
     "moment": "^2.22.1",
     "npm": "^5.8.0",
     "prop-types": "^15.6.1",
+    "query-string": "^6.0.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-error-overlay": "^4.0.0",
