--- a/react-ui/package.json
+++ b/react-ui/package.json
@@ -47,5 +47,5 @@
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   },
-  "proxy": "http://localhost:5000/api"
+  "proxy": "https://localhost:5000/api"
 }
