--- a/react-ui/package.json
+++ b/react-ui/package.json
@@ -27,6 +27,7 @@
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-error-overlay": "^4.0.0",
+    "react-ga": "^2.5.0",
     "react-redux": "^5.0.7",
     "react-router-bootstrap": "^0.24.4",
     "react-router-dom": "^4.2.2",
