--- a/package.json
+++ b/package.json
@@ -23,9 +23,11 @@
     "cors": "^2.8.4",
     "dotenv": "^5.0.1",
     "express": "^4.16.3",
+    "helmet": "^3.12.0",
     "jwt-simple": "^0.5.1",
     "knex": "^0.14.4",
     "moment": "^2.22.0",
+    "morgan": "^1.9.0",
     "nodemon": "^1.17.3",
     "npm": "^5.8.0",
     "passport": "^0.4.0",
